[build-system]
requires = ["setuptools>=61.0", 
            "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "basic_sort_UNIQUE_SUFFIX"
version = "0.0.1"
authors = [{ name="Author1", email="author1@maine.edu" },
           { name="Author2", email="author2@maine.edu" },

[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
docstring-convention = "google"

]
description = "An exercise in the capstone course"
readme = "README.md"
requires-python = ">=3.9.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0",
    "Operating System :: OS Independent",
]

[project.urls]
"Bug Tracker" = "https://github.com/pypa/python_package_exercise/issues"


